// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertCard renders with defaultProps 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-medium"
  >
    <div
      className="ax-alert-card ax-alert-card--medium"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertCard renders with onRemoveClick 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-medium"
  >
    <div
      className="ax-alert-card ax-alert-card--medium"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
      <div
        className="ax-alert-card__remove"
      >
        <a
          className="ax-link ax-link--style-subtle"
          onClick={[Function]}
        >
          <svg
            className="ax-icon ax-icon--cross"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertCard renders with shade shade-1 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-medium"
  >
    <div
      className="ax-alert-card ax-alert-card--medium"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertCard renders with shade shade-2 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--shade-2 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-medium"
  >
    <div
      className="ax-alert-card ax-alert-card--medium"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertCard renders with shade shade-3 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--shade-3 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-medium"
  >
    <div
      className="ax-alert-card ax-alert-card--medium"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertCard renders with shade shade-4 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--shade-4 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-medium"
  >
    <div
      className="ax-alert-card ax-alert-card--medium"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertCard renders with size large 1`] = `
<div
  className="ax-card ax-card--size-large ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-large"
  >
    <div
      className="ax-alert-card ax-alert-card--large"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertCard renders with size medium 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-medium"
  >
    <div
      className="ax-alert-card ax-alert-card--medium"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertCard renders with size small 1`] = `
<div
  className="ax-card ax-card--size-small ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-small"
  >
    <div
      className="ax-alert-card ax-alert-card--small"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertCard renders with type error 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-medium"
  >
    <div
      className="ax-alert-card ax-alert-card--medium"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--error"
        >
          <svg
            className="ax-icon ax-icon--warning"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertCard renders with type info 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-medium"
  >
    <div
      className="ax-alert-card ax-alert-card--medium"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertCard renders with type success 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-medium"
  >
    <div
      className="ax-alert-card ax-alert-card--medium"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--success"
        >
          <svg
            className="ax-icon ax-icon--tick"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertCard renders with type warning 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-card__content ax-card__content--separator-solid ax-card__content--size-medium"
  >
    <div
      className="ax-alert-card ax-alert-card--medium"
    >
      <div
        className="ax-alert-card__icon"
      >
        <div
          className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--warning"
        >
          <svg
            className="ax-icon ax-icon--warning"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-alert-card__content"
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;
